# codealpha_tasks

./: README.md  main.py  pyproject.toml  requirements.txt
CodeAlpha_netflix-eda/: README.md  run_eda.py
CodeAlpha_netflix-eda/scripts/: download_netflix_data.py
CodeAlpha_netflix-eda/src/: __init__.py  config.py
CodeAlpha_voltscope/: GITHUB_SETUP.md  LICENSE.txt  PORTFOLIO.md  gitignore.txt
CodeAlpha_voltscope/data/raw/: global_energy_consumption.csv
CodeAlpha_voltscope/scripts/: export_tableau_data.py
CodeAlpha_voltscope/src/: style.py
CodeAlpha_voltscope/src/visualizations/: correlation_analysis.py
CodeAlpha_voltscope/stories/: energy_transition_story.md
CodeAlpha_voltscope/tableau/: TABLEAU_GUIDE.md
CodeAlpha_voltscope/tableau/data/: voltscope_yearly_regional.csv
netflix-eda/: requirements.txt
netflix-eda/data/processed/: netflix_cleaned.csv
netflix-eda/docs/: README.md
netflix-eda/notebooks/: 01_exploratory_analysis.ipynb
netflix-eda/reports/: eda_summary.json
netflix-eda/src/: eda_utils.py  load_data.py  visualizations.py
voltscope/: main.py
voltscope/data/processed/: energy_enriched.csv
voltscope/notebooks/: 01_data_exploration.ipynb
voltscope/src/: load_data.py
voltscope/src/visualizations/: dashboard.py  regional_comparison.py  renewable_mix.py  trend_analysis.py
voltscope/tableau/data/: voltscope_energy_2024_snapshot.csv
